Phase 6: Stripe Connect Payments

--- a/la-grieta/api/.env.example
+++ b/la-grieta/api/.env.example
@@ -5,6 +5,10 @@ DATABASE_URL="postgresql://user:password@localhost:5432/lagrieta?schema=public"
 JWT_SECRET="your-secret-key-change-in-production"
 JWT_EXPIRES_IN="7d"
 
+# Stripe API Configuration (test mode)
+STRIPE_SECRET_KEY="sk_test_your_stripe_secret_key"
+STRIPE_WEBHOOK_SECRET="whsec_your_webhook_secret"
+
 # Riot API (optional - will use mock data if not provided)
 RIOT_API_KEY=""
 
