--- a/la-grieta/package.json
+++ b/la-grieta/package.json
@@ -75,6 +75,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@prisma/client": "^5.22.0",
+    "@stripe/stripe-js": "^8.6.4",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
@@ -84,6 +85,7 @@
     "passport-jwt": "^4.0.1",
     "prisma": "^5.22.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~7.8.0"
+    "rxjs": "~7.8.0",
+    "stripe": "^20.2.0"
   }
 }
