Add Prisma migrate deploy to Dockerfile for auto-migrations

--- a/la-grieta/api/Dockerfile
+++ b/la-grieta/api/Dockerfile
@@ -77,5 +77,5 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
 # Use dumb-init to handle signals properly
 ENTRYPOINT ["dumb-init", "--"]
 
-# Start the application
-CMD ["node", "main.js"]
+# Run migrations and start the application
+CMD ["sh", "-c", "npx prisma migrate deploy && node main.js"]
